--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   },
   "dependencies": {
     "babel-runtime": "^6.18.0",
-    "meteor-node-stubs": "~0.2.0"
+    "bluetooth-scanner": "^1.0.1",
+    "meteor-node-stubs": "~0.2.0",
+    "node-hid": "^0.5.2",
+    "noolite": "^2.0.2"
   }
 }
