--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
   },
   "dependencies": {
     "babel-runtime": "^6.18.0",
-    "bluetooth-scanner": "^1.0.1",
+    "bcrypt": "^1.0.2",
+    "bufferutil": "^1.3.0",
+    "fingerprintjs2": "^1.4.1",
     "meteor-node-stubs": "~0.2.0",
+    "mosca": "^2.2.0",
+    "mqtt": "^2.2.1",
     "node-hid": "^0.5.2",
-    "noolite": "^2.0.2"
+    "noolite": "^2.0.2",
+    "tracer": "^0.8.7",
+    "utf-8-validate": "^2.0.0"
   }
 }
