--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mqtt": "^2.2.1",
     "node-hid": "^0.5.2",
     "noolite": "^2.0.2",
+    "simpl-schema": "^0.2.3",
     "tracer": "^0.8.7",
     "utf-8-validate": "^2.0.0"
   }
