--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-hid": "^0.5.2",
     "noolite": "^2.0.2",
     "simpl-schema": "^0.2.3",
+    "stringinject": "^2.0.2",
     "tracer": "^0.8.7",
     "utf-8-validate": "^2.0.0"
   }
